--- a/index.html
+++ b/index.html
@@ -16,12 +16,15 @@
 <!-- Title -->
 <h1>Welcome</h1><br>
 
-<!-- Text Intro -->	
+<!-- Text Intro -->
 	<p>This is my new thing :)</p><br><br>
 
-<!-- Links -->
-<h2>Links</h2><br>
-	<p><button><a href="https://yoongisbbyjimin.tumblr.com/">My Tumblr</a></button></p>
+<!-- Links Menu -->
+<ul class="menu">
+	<li><a href="https://caitlinmxoxo.github.io">Home</li>
+	<li><a href="https://yoongisbbyjimin.tumblr.com/">Tumblr</a></li>
+	<li><a href="https://twitter.com/yoongisbbyjimin">Twitter</a></li>		
+</ul>
 
 </center>
 
