--- a/index.html
+++ b/index.html
@@ -10,25 +10,24 @@
 <body>
 
 	<!-- Links Menu -->
-<div class="nav-wrapper">
-	<nav class="nav-menu">
-		<ul class="clearfix">
+
+	<nav>
+		<ul>
 			<li><a href="https://caitlinmxoxo.github.io">Home</li>
 			<li><a href="https://yoongisbbyjimin.tumblr.com/">Tumblr</a></li>
 			<li><a href="https://twitter.com/yoongisbbyjimin">Twitter</a></li>
-			<li class="dropdown"><a href="/">Contact</a>
-				<ul class="sub-menu">
-					<li><a href="mailto"><!--insert e-mail here--></li>
-				</ul>
-			</li>
 		</ul>
-	</nav>
-<div>
+</nav>
+
 <!-- Title -->
-<h1>Welcome</h1><br>
+
+	<h1>Welcome</h1><br>
+
 
 <!-- Text Intro -->
-	<p>This is my new thing :)</p><br><br>
+
+	<p>This is my new thing :)</p>
+
 
 
 </body>
