--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en-US">
 <html>
 
@@ -11,23 +11,23 @@
 
 	<!-- Links Menu -->
 
-	<nav>
-		<ul>
-			<li><a href="https://caitlinmxoxo.github.io">Home</li>
-			<li><a href="https://yoongisbbyjimin.tumblr.com/">Tumblr</a></li>
-			<li><a href="https://twitter.com/yoongisbbyjimin">Twitter</a></li>
-		</ul>
-</nav>
+<div class="w3-top">
+	<div class="w3-bar w3-pale-red">
+	<a href="https://caitlinmxoxo.github.io" class="w3-bar-item w3-hover-pink">Home</a>
+	<a href="https://yoongisbbyjimin.tumblr.com/" class="w3-bar-item w3-hover-pink">Tumblr</a>
+	<a href="https://twitter.com/yoongisbbyjimin" class="w3-bar-item w3-hover-pink">Twitter</a>
+</div>
+	</div>
 
 <!-- Title -->
-
-	<h1>Welcome</h1><br>
-
+<div class="w3-container w3-pink">
+	<h1>Welcome</h1>
+</div>
 
 <!-- Text Intro -->
-
+<div class="w3-container">
 	<p>This is my new thing :)</p>
-
+<div>
 
 
 </body>
